fix z-index on editor controls

--- a/components/content/content-editor/controls/content-editor-controls.styl
+++ b/components/content/content-editor/controls/content-editor-controls.styl
@@ -1,5 +1,6 @@
 .content-editor-controls
 	position: absolute
+	z-index: 10
 
 .-add-button
 	transition: transform 0.2s ease
