--- a/components/content/content-editor/controls/text/text-controls.styl
+++ b/components/content/content-editor/controls/text/text-controls.styl
@@ -1,5 +1,6 @@
 .content-editor-text-controls
 	position: absolute
+	z-index: 10
 
 .fade-enter-active, .fade-leave-active
 	transition: opacity 0.05s
